package lab11.ex1;

public interface Observer {
    
    public void update(Produto produto);
    
}
